# sherut

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
benchmarks/: .gitignore  benchmark.sh  main.py  people.sh
examples/: data.db
spec/: basic_spec.sh  spec_helper.sh
src/: cli.rs  handler.rs  main.rs  routes.rs  shell.rs  state.rs
