[package]
name = "sherut"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.12.3"
